Implementando autenticação JWT, e testando no Swagger
