# app/controllers/application_controller.rb
@@ -1,2 +1,10 @@
 class ApplicationController < ActionController::API
+    before_action :authenticate_request
+    attr_reader :current_user
+
+    private    
+    def authenticate_request
+        @current_user = AuthorizeApiRequest.call(request.headers).result
+        render json: { error: 'Acesso não autorizado. Autenticação requerida.' }, status: 401 unless @current_user
+    end
 end
